[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.190", features = ["derive"]}
serde_cbor = "0.11.2"
serde_derive = "1.0.190"
tokio = { version = "1.33.0", features = ["full"] }


[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
