[package]
name = "project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.190", features = ["derive"]}
serde_derive = "1.0.190"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
serde_cbor = "0.11.2"
image = "0.24.7"
steganography = "1.0.2"
rayon = "1.8.0"
sysinfo = "0.29.10"
gdk-pixbuf = "0.18.3"
gtk = { git = "https://github.com/gtk-rs/gtk3-rs.git" } 
# sudo apt install libgtk-3-dev libgtksourceview-3.0-dev libwebkit2gtk-4.0-dev

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client_app"
path = "src/client_app.rs"